--- a/movies/templates/movies.html
+++ b/movies/templates/movies.html
@@ -7,6 +7,7 @@
     <title>Ciné Navigate</title>
     <link rel="stylesheet" href="{% static 'movies.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <link rel="icon" href="data:,">
     <style>
         html,
         body {
